[package]
name = "ip-over-airtag"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
futures = "0.3.31"
hex = "0.4.3"
itertools = "0.14.0"
offline-finding = { path = "../../offline-finding", default-features = false, features = [
	"std",
] }
p224 = "0.13.2"
rand = "0.8.5"
sha2 = "0.10.8"
tokio = { version = "1.44.1", features = ["full"] }
