[package]
name = "serial-writer"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
hex = "0.4.3"
serialport = "4.7.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
offline-finding = { path = "../../offline-finding", default-features = false, features = [
	"std",
] }
base64 = "0.22.1"
rand = "0.8.5"
tokio = { version = "1.44.1", features = ["full"] }
p224 = "0.13.2"
